force-app/main/default/objects/Quote_Line_Item__dlm/fields/KQ_QuoteLineItemId__c.field-meta.xml
<CustomField>
    <fullName>KQ_QuoteLineItemId__c</fullName>
    <label>Key Qualifier QuoteLineItemId</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Key Qualifier QuoteLineItemId</labelOverride>
        <masterLabel>Key Qualifier QuoteLineItemId</masterLabel>
        <refAttrDeveloperName>KQ_QuoteLineItemId</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>