force-app/main/default/objects/Quote_Line_Item__dlm/fields/QuoteLineItemId__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineItemId__c</fullName>
    <label>QuoteLineItemId</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>QuoteLineItemId</labelOverride>
        <masterLabel>QuoteLineItemId</masterLabel>
        <primaryIndexOrder>1</primaryIndexOrder>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>